force-app/main/default/objects/Offer__c/fields/Counter_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Amount__c</fullName>
    <description>Counter offer amount</description>
    <inlineHelpText>Amount if counter offer was made</inlineHelpText>
    <label>Counter Offer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>