force-app/main/default/objects/Offer__c/fields/Earnest_Money__c.field-meta.xml
<CustomField>
    <fullName>Earnest_Money__c</fullName>
    <description>Earnest money amount</description>
    <inlineHelpText>Amount of earnest money deposit</inlineHelpText>
    <label>Earnest Money</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>