force-app/main/default/objects/Offer__c/fields/Financing_contingency__c.field-meta.xml
<CustomField>
    <fullName>Financing_contingency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Financing contingency included</description>
    <inlineHelpText>Check if offer includes financing contingency</inlineHelpText>
    <label>Financing contingency</label>
    <type>Checkbox</type>
</CustomField>