force-app/main/default/objects/Offer__c/fields/Inspection_contingency__c.field-meta.xml
<CustomField>
    <fullName>Inspection_contingency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inspection contingency included</description>
    <inlineHelpText>Check if offer includes inspection contingency</inlineHelpText>
    <label>Inspection contingency</label>
    <type>Checkbox</type>
</CustomField>