force-app/main/default/objects/Offer__c/fields/Offered_amount__c.field-meta.xml
<CustomField>
    <fullName>Offered_amount__c</fullName>
    <description>Offered amount</description>
    <inlineHelpText>Enter the offered purchase price</inlineHelpText>
    <label>Offered amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>