force-app/main/default/objects/Offer__c/fields/Property_Listing_Actual__c.field-meta.xml
<CustomField>
    <fullName>Property_Listing_Actual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Listing Actual</label>
    <referenceTo>Property_Listing__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>