force-app/main/default/objects/Offer__c/fields/Special_terms_and_conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_terms_and_conditions__c</fullName>
    <description>Special terms and conditions</description>
    <inlineHelpText>Any special terms or conditions</inlineHelpText>
    <label>Special terms and conditions</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>