force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offered_amount__c</columns>
    <columns>Offer_Date__c</columns>
    <columns>Expiration_date__c</columns>
    <columns>Status__c</columns>
    <columns>Deposit_Amount__c</columns>
    <columns>Financing_contingency__c</columns>
    <columns>Inspection_contingency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>